--- a/Report.ipynb
+++ b/Report.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## DDPG-Report \n",
     "\n",
-    "The chosen algorithm for the reacher environment is the Deep Deterministic Policy Gradient (DDPG) algorithm. Its part of the A2C / Actor-Critic family. That means the agent consists of two neural networks, one is the Actor. It takes the state as an input and returns two values: mu and sigma². These are the mean and the variance of a (action-) distribution. The critic network takes the state and a calculates action by the mean and variance as an input and returns the value of the Q-Value: critic_net(state, actor_net(state)) -> Q(s,a).\n",
+    "The chosen algorithm for the reacher environment is the Deep Deterministic Policy Gradient (DDPG) algorithm. Its part of the A2C / Actor-Critic family. That means the agent consists of two neural networks. The first is the Actor, it takes the state as an input and returns two values: mu and sigma². These are the mean and the variance of a (action-) distribution where the action is sampled of. The second network, the critic, takes the state and the action taken by the agent as an input and returns the Q-Value: critic_net(state, actor_net(state)) -> Q(s,a).\n",
     "\n",
     "#### Architecture:\n",
     "The network of the Actor consists of 2 fully connected (hidden) layers with a size of 400 and 300 units.\n",
